tests/compile-fail/integration_suite__integration__mapfiles__intrinsic_op_input_arg_wrong_type.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad ABI for intrinsic: ABI input arg has unexpected encoding (float)
  ┌─ <mapfile>:5:4
  │
5 │ 99 Sf
  │    ^^ ABI input arg has unexpected encoding (float)


